# simple_calc

./: .gitignore  LICENSE  calc.py  models.py  pyproject.toml  requirements.txt  run.py
templates/: index.html
tests/: test_calc.py
