[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Taras Nytiaha", email = "taras.nytiaha@gmail.com"},
]
dependencies = [
    "flask>=3.0.0",
    "flask-pydantic>=0.11.0",
    "ipython>=8.18.1",
    "pytest>=7.4.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

